ajout d'un gist

--- a/hello.html
+++ b/hello.html
@@ -16,17 +16,22 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
-		<!-- description-->
+		<!-- description -->
 		<div>
 			<h1>Ma description</h1>
 			<p>Bonjour, je m'appelle Arnaud et je suis votre instructeur pour cette formation Git.</p>
 		</div>
 
-		<!-- reconpense-->
+		<!-- reconpense -->
 		<div>
 			<h1>Mes récompenses</h1>
 			<p>en construction ...</p>
 		</div>
+
+		<!-- Mon gist -->
+		<div>
+			<h1>Mon gist</h1>
+			<p><script src="https://gist.github.com/dilane56/147ef7edf0e91bc13242e8e488d0bf31.js"></script></p>
+		</div>
 		
-	
 </body></html>
