--- a/hello.html
+++ b/hello.html
@@ -33,5 +33,11 @@
 			<h1>Mon gist</h1>
 			<p><script src="https://gist.github.com/dilane56/147ef7edf0e91bc13242e8e488d0bf31.js"></script></p>
 		</div>
+
+		<!-- Commandes git -->
+		<div>
+			<h1>Mes commandes git</h1>
+			<p>git pull</p>
+		</div>
 		
 </body></html>
